src/test/resources/dev/meanmail/inspections/directive/directiveInWrongParent.nginx
events {
    <error descr="Directive 'listen' is not allowed in this context. 
Allowed contexts:
  - listen(context: server)
  - listen(context: server)
  - listen(context: server)">listen</error> 80;
}
